# KML-PanelQC

./: README.md  pyproject.toml
src/config/: env.py  software.py
src/kml_panelqc/: __main__.py  check.py  cli.py  config.py  fastq.py  snakemake.py  system.py
src/util/: prepare_input_from_bcl2fastq_out.py
template/: HAOBOHBV.bed  probeCov.gene.bed  test.tsv
tests/: test_check.py  test_fastq.py  test_snakemake.py
wf-panelqc/: Snakefile
wf-panelqc/rules/: all_summary.smk  bam_stats.smk  fq_stats.smk  prepare_ref.smk
wf-panelqc/scripts/: all_summary.py  bam_stats.py  fq_all_samples_qc.py
